Termino do Login e Criacao da tela de cards do usuario

--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "admin-lte": "^3.1.0-rc",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
+    "datatable": "^2.0.2",
+    "datatables": "^1.10.18",
+    "jsonwebtoken": "^8.5.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.3",
+    "react-data-table-component": "^7.0.0-alpha-4",
     "react-dom": "^17.0.1",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-toastify": "^6.2.0",
+    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
