--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "datatable": "^2.0.2",
     "datatables": "^1.10.18",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
+    "react-bootstrap-typeahead": "^5.1.4",
     "react-data-table-component": "^7.0.0-alpha-4",
     "react-dom": "^17.0.1",
     "react-facebook-login": "^4.1.1",
