--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-data-table-component": "^7.0.0-alpha-4",
     "react-dom": "^17.0.1",
     "react-facebook-login": "^4.1.1",
+    "react-google-charts": "^3.0.15",
     "react-google-login": "^5.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
