--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "datatables": "^1.10.18",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-bootstrap-typeahead": "^5.1.4",
