--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-facebook-login": "^4.1.1",
     "react-google-charts": "^3.0.15",
     "react-google-login": "^5.2.2",
+    "react-https-redirect": "^1.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-toastify": "^6.2.0",
